// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.v2.controller GET /harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [
    Object {
      "amount": 0.019444617913515275,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 519.4928843851667,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 127.77060811430661,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 0.19661862226091095,
      "block": 13647052,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 671.2872269577839,
      "timestamp": 1637345136,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
  ],
}
`;

exports[`vaults.v2.controller GET /harvests/:vault error cases returns a 400 for invalide chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /harvests/:vault success cases Return extended harvests for chain vault by addr 1`] = `
Array [
  Object {
    "amount": 0.019444617913515275,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 519.4928843851667,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 127.77060811430661,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 0.19661862226091095,
    "block": 13647052,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 671.2872269577839,
    "timestamp": 1637345136,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
]
`;

exports[`vaults.v2.controller GET /vaults with a specified chain returns the vaults for bsc 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.22498409152323756,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 8.26,
      "nonHarvestApy": 8.26,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.22498409152323756,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`vaults.v2.controller GET /vaults with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.22498409152323756,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 8.26,
      "nonHarvestApy": 8.26,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.22498409152323756,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`vaults.v2.controller GET /vaults with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /vaults with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.22498409152323756,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 8.26,
      "nonHarvestApy": 8.26,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.22498409152323756,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "Query param vault invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/harvests success cases Return extended harvests for chain vault by addr 1`] = `
Array [
  Object {
    "amount": 0.019444617913515275,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 519.4928843851667,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 127.77060811430661,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 0.19661862226091095,
    "block": 13647052,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 671.2872269577839,
    "timestamp": 1637345136,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list with a specified chain returns the requested vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.22498409152323756,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 8.26,
      "nonHarvestApy": 8.26,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.22498409152323756,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.22498409152323756,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 8.26,
      "nonHarvestApy": 8.26,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 4.13,
          "boostable": false,
          "maxApr": 4.13,
          "minApr": 4.13,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.22498409152323756,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [
    Object {
      "amount": 0.019444617913515275,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 519.4928843851667,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 127.77060811430661,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 0.19661862226091095,
      "block": 13647052,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 671.2872269577839,
      "timestamp": 1637345136,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
  ],
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid timestamps 1`] = `
Object {
  "errors": Array [],
  "message": "Query param timestamps invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for missed vault address param 1`] = `
Object {
  "errors": Array [],
  "message": "Query param vault invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 and vaults snapshots for all dates, without duplications 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645103004000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1645015261000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1644928124000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with 1 relevant vault and 2 old snapshots 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645189933000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821933000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821931000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with empty array, got unmatched data 1`] = `Array []`;
